<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"

        >
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:padding="10dp"
        android:layout_gravity="end|bottom|center_vertical"
        />
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="end"
        android:padding="1dp"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_input_delete"
            android:onClick="onDelete"
            android:textColor="@color/black"
            app:backgroundTint="@color/cardview_dark_background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="1dp"
        >

        <Button
            android:id="@+id/btnSeven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/backGroundColor"
            android:onClick="onDigitClick"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitClick"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnNine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitClick"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnDivide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperatorClick"
            android:text="@string/_divide"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="1dp"
        >

        <Button
            android:id="@+id/btnFour"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/backGroundColor"
            android:onClick="onDigitClick"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFive"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitClick"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnSix"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitClick"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnMyltiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperatorClick"
            android:text="@string/_multiply"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="1dp"
        >

        <Button
            android:id="@+id/btnOne"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/backGroundColor"
            android:onClick="onDigitClick"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTwo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitClick"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnThree"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitClick"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperatorClick"
            android:text="@string/_add"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="1dp"
        >

        <Button
            android:id="@+id/btnDot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/backGroundColor"
            android:onClick="onDecimalClick"
            android:text="@string/_dot"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnZero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigitClick"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/clr"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />

        <Button
            android:id="@+id/btnSubtract"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperatorClick"
            android:text="@string/_subtract"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/backGroundColor" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="1dp"
        >

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/backGroundColor"
            android:onClick="onEqualClick"
            android:text="@string/_equal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>